624 fix UI components on small batch sent submission (#4637)
* feat(write page): add small batch option to sentence collector toggle

* chore: rename write components

* feat(write page): show error message for adding multiple sentences in single mode

* feat(write page): add small batch rules

* fix(write page): fix rules page types

* feat(write page): send small batch sentences to backend

* feat(small-batch): implement download for rejected sentences

* test: fix failing tests

* test(write page): update write page test

* fix: fix rules section on toggle

* fix: fix breakpoints for toggle

* fix(write page): center instruction text
- fix guidelines accordion

* fix(write page): fix failing test
- fix toggle behaviour

* fix review page regression
- add border-radius to guidelines box

* test(review page): fix failing review page test

* fix(write page): fix instruction margin on large screens

--- a/web/src/components/pages/contribution/sentence-collector/write/bulk-submission-write/bulk-submission-write.css
+++ b/web/src/components/pages/contribution/sentence-collector/write/bulk-submission-write/bulk-submission-write.css
@@ -2,7 +2,7 @@
 
 .bulk-upload-container {
     height: 100%;
-    min-height: 78vh;
+    min-height: 65vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -22,6 +22,10 @@
             @media (--md-down) {
                 flex-direction: column;
                 align-items: center;
+            }
+
+            @media (--xs-down) {
+                width: min-content;
             }
 
             & .upload-dropzone {
