--- a/web/src/components/pages/contribution/sentence-collector/write/sentence-write/sentence-write.css
+++ b/web/src/components/pages/contribution/sentence-collector/write/sentence-write/sentence-write.css
@@ -5,25 +5,11 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        min-height: 78vh;
+        min-height: 65vh;
         justify-content: space-between;
 
         @media (--sm-down) {
             padding: 20px 20px 0;
-        }
-    }
-
-    & .subtitle {
-        margin-bottom: 20px;
-        font-size: var(--font-size-sm);
-        font-style: italic;
-        color: var(--near-black);
-
-        @media (--xs-down) {
-            font-size: var(--font-size-xs);
-            text-align: center;
-            margin-right: 12px;
-            margin-left: 12px;
         }
     }
 
